making the reference file url dynamic in employee portal

--- a/Georgian.Employee.ResponsiveUI/ResponsiveUI/GcResponsive/GC_responsive_ui.css
+++ b/Georgian.Employee.ResponsiveUI/ResponsiveUI/GcResponsive/GC_responsive_ui.css
@@ -220,6 +220,12 @@ body {
 /* Smartphones */
 @media screen and (max-width: 480px) {
 
+    .ms-rtePosition-2, .ms-rtePosition-1 {
+        width: 100%;
+        height: auto;
+        display: block;
+    }
+
     div#DeltaPlaceHolderSearchArea {
         display: none;
     }
